syntax = "proto3";
package jackaldao.canine.jklmint;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "jklmint/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/jackal-dao/canine/x/jklmint/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos/mint/v1beta1/params";
  }

  // Inflation returns the current minting inflation value.
  rpc Inflation(QueryInflationRequest) returns (QueryInflationResponse) {
    option (google.api.http).get = "/cosmos/mint/v1beta1/inflation";
  }
  // Queries a list of GetInflation items.
	rpc GetInflation(QueryGetInflationRequest) returns (QueryGetInflationResponse) {
		option (google.api.http).get = "/jackal-dao/canine/jklmint/get_inflation";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryInflationRequest is the request type for the Query/Inflation RPC method.
message QueryInflationRequest {}

// QueryInflationResponse is the response type for the Query/Inflation RPC
// method.
message QueryInflationResponse {
  // inflation is the current minting inflation value.
  bytes inflation = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

message QueryGetInflationRequest {
}

message QueryGetInflationResponse {
  string inflation = 1;
}

// this line is used by starport scaffolding # 3
